# uutils-num-prime

./: .gitignore  COPYRIGHT  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md
.github/workflows/: audit.yml  ci.yml  codspeed.yml
bench/: Cargo.toml
bench/benches/: bench.rs
examples/: profile_factorization.rs  test_comparison.rs
src/: buffer.rs  factor.rs  integer.rs  lib.rs  mint.rs  nt_funcs.rs  primality.rs  tables.rs  traits.rs  util.rs
util/: validate_with_scilab.sh
