[package]
name = "num-prime"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
description = """
Generic and optimized primality test, factorization and various number theoretic functions with arbitrary precision based on `num`.
"""
documentation = "https://docs.rs/num-prime"
readme = "README.md"
repository = "https://github.com/uutils/num-prime"
license = "Apache-2.0"
keywords = ["bigint", "mathematics", "num", "number-theory", "primes"]
categories = ["algorithms", "cryptography", "science"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
  "bench",
]

[workspace.package]
edition = "2018"
rust-version = "1.70"

[dependencies]
bitvec = "1.0.0"
either = "1.6.1"
lru = "0.16.3"
num-integer = "0.1.44"
num-modular = "0.6.1"
num-traits = "0.2.14"
rand = "0.8.6"

[dependencies.num-bigint]
version = "0.4.6"
features = ["rand"]
optional = true

[features]
default = ["big-int", "big-table"]
# TODO: use the new cargo feature to override the num-bigint option
big-int = [
  "num-bigint",
  "num-modular/num-bigint",
  "num-modular/num-integer",
  "num-modular/num-traits"
]
big-table = []
