[package]
name = "num-prime-bench"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[[bench]]
name = "bench"
harness = false

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-prime = { path = "..", features = ["big-int"] }
criterion = { version = "4.3.0", package = "codspeed-criterion-compat" }
rand = "0.8"
num-primes = { version = "0.3.0", optional = true }
primal-check = "0.3.1"
is_prime = "2.0.7"
glass_pumpkin = "1.2.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
number-theory = "0.0.6"

[features]
default = ["num-primes"]


