[package]
name = "num-prime-bench"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[[bench]]
name = "bench"
harness = false

[dependencies]
num-primes = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = { version = "4.4.1", package = "codspeed-criterion-compat" }
glass_pumpkin = "1.2.0"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-prime = { path = "..", features = ["big-int"] }
primal-check = "0.3.1"
rand = "0.8.4"
rand_chacha = "0.10"
rand_core = "0.10"

[features]
default = []
num-primes = ["dep:num-primes"]
