[package]
name = "num-prime-bench"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bench]]
harness = false
name = "bench"

[dependencies]
num-primes = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "4.4.1" }
glass_pumpkin = "1.2.0"
num-bigint = { version = "0.4", features = ["rand"] }
num-prime = { path = "..", features = ["big-int"] }
primal-check = "0.3.1"
rand = "0.8.6"
rand_chacha = "0.10"
rand_core = "0.10"

[features]
default = []
num-primes = ["dep:num-primes"]
